stop horizontal scroll bar appearing when inputting labels on image view

--- a/kahuna/public/js/components/gr-add-label/gr-add-label.css
+++ b/kahuna/public/js/components/gr-add-label/gr-add-label.css
@@ -5,6 +5,7 @@ gr-add-label{
 
 gr-add-label form input {
     margin-bottom: 5px;
+    width: 150px;
 }
 
 gr-add-label:hover {
